# wasm-runtime-composer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: composable.rs  composable_instance.rs  composition.rs  composition_builder.rs  error.rs  filtered.rs  lib.rs  linker_ops.rs
src/composable/: component.rs  filtered.rs  linker_instance_ops.rs  linker_ops.rs  mod.rs
src/composable/composition/: builder.rs  composer.rs  descriptor.rs  mod.rs
src/composable/instance/: channel.rs  inbox.rs  link.rs  linker_impl.rs  mod.rs
src/composable/instance/core/: channel.rs  inbox.rs  link.rs  mod.rs
tests/: composable_component.rs  cross_component_call.rs
tests/guests/: Cargo.toml
tests/guests/consumer/: Cargo.toml
tests/guests/consumer/src/: lib.rs
tests/guests/producer/: Cargo.toml
tests/guests/producer/src/: lib.rs
tests/guests/wit/: test.wit
