[package]
name = "wasm-runtime-composer"
version = "0.1.0"
edition = "2024"
description = "Runtime composition of WebAssembly components using wasmtime"
license = "MIT"
authors = ["Alexander Shitikov <a.shitikov73@gmail.com>"]
repository = "https://github.com/ashitikov/wasm-runtime-composer"

[features]
default = ["component-model-async"]
component-model-async = ["wasmtime/component-model-async"]

[dependencies]
wasmtime = { version = ">=42", features = ["async"] }
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "rt"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wasmtime = { version = ">=42" }
wasmtime-wasi = { version = ">=42" }
